--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Xa Music V2",
+  "name": "Yukki Music Old",
   "description": "A Telegram Music Bot with proper functions written in Python with Pyrogram and Py-Tgcalls.",
-  "logo": "https://telegra.ph/file/fecb50042cabee93dc20b.jpg",
+  "logo": "https://telegra.ph/file/a1d37aa39112dc4c2a8a2.jpg",
   "keywords": [
   "python3",
   "telegram",
@@ -27,7 +27,7 @@
       "required": true
     },
     "DURATION_LIMIT": {
-      "description": "Durasi Maksimal Pemutaran (Menit).. Contoh: 60",
+      "description": "Durasi Maksimal Pemutaran (Menit).. Contoh: 60 (Maksimal 720)",
       "value": "60",
       "required": true
     },
@@ -48,12 +48,12 @@
     },
     "SUPPORT_CHANNEL": {
       "description": "Link Channel Support mu, Jika Tidak ada Silahkan /skip . Link harus berawalan https://t.me/",
-      "value": "https://t.me/tirexgugel",
+      "value": "https://t.me/ngacabrek",
       "required": false
     },
     "SUPPORT_GROUP": {
       "description": "Link Group Support mu, Jika Tidak ada Silahkan /skip . Link harus berawalan https://t.me/",
-      "value": "https://t.me/rexaprivateroom",
+      "value": "https://t.me/sharinguserbot",
       "required": false
     },
     "OWNER_ID": {
@@ -98,7 +98,7 @@
     },
     "UPSTREAM_REPO": {
       "description": "Silahkan /skip saja ",
-      "value": "https://github.com/Rexashh/xamusicv2",
+      "value": "https://github.com/BenyXP/YukkiOld",
       "required": true
     },
     "UPSTREAM_BRANCH": {
