--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pillow
 pyrogram==1.4.16
 hachoir
 lyricsgenius
-py-tgcalls==0.9.0
+py-tgcalls==0.8.6
 wget
 python-dotenv
 youtube-search-python
@@ -17,7 +17,7 @@ psutil
 requests
 rich
 dnspython
-yt-dlp==2021.11.10.1
+yt-dlp
 tgcrypto
 gitpython
 heroku3
